dnl Process this file with autoconf to produce a configure script.

dnl 
dnl Initialization
dnl

dnl disable saving cache
define([AC_CACHE_SAVE], )dnl

AC_PREREQ(2.54)
AC_INIT([alps-looper], [3.0b1])
AC_PREFIX_DEFAULT([$HOME/ALPS])

dnl
dnl check for ALPS library
dnl

AC_MSG_CHECKING([for ALPS library])
if test -f "$ac_cv_alps_include_mk"; then
  AC_MSG_RESULT([OK])
else
  AC_MSG_RESULT([not found])
  AC_MSG_ERROR([ALPS library not found.])
fi
AC_SUBST(INCLUDE_MK)
INCLUDE_MK="$ac_cv_alps_include_mk"

dnl
dnl check for MPI library
dnl

AC_MSG_CHECKING([for MPI library])
AC_SUBST(PROGRAM_MPI)
if test "$ac_cv_have_mpi" = yes; then
  PROGRAM_MPI='$(PROGRAM_MPI)'
  AC_MSG_RESULT([yes])
else
  AC_MSG_RESULT([no])
fi

dnl
dnl generate files
dnl

AC_CONFIG_FILES(Makefile test/Makefile)
AC_CONFIG_FILES(lattices.xml models.xml)
AC_CONFIG_FILES(test/lattices.xml test/models.xml)
AC_OUTPUT
