dnl Process this file with autoconf to produce a configure script.
dnl $Id: configure.in 555 2003-11-12 02:58:33Z wistaria $

dnl 
dnl Initialization
dnl

dnl disable saving cache
define([AC_CACHE_SAVE], )dnl

AC_PREREQ(2.57)
AC_INIT([looper], [3.0b3])
AC_PREFIX_DEFAULT([$HOME/ALPS])

dnl
dnl check for ALPS library
dnl

AC_MSG_CHECKING([for ALPS library])
if test -f "$ac_cv_alps_include_mk"; then
  AC_MSG_RESULT([OK])
else
  AC_MSG_RESULT([not found])
  AC_MSG_ERROR([ALPS library not found.])
fi
AC_SUBST(INCLUDE_MK)
INCLUDE_MK="$ac_cv_alps_include_mk"

dnl
dnl check for MPI library
dnl

AC_MSG_CHECKING([for MPI library])
AC_SUBST(PROGRAM_MPI)
AC_SUBST(EXAMPLE_MPI)
if test "$ac_cv_alps_have_mpi" = yes; then
  PROGRAM_MPI='$(PROGRAM_MPI)'
  EXAMPLE_MPI='$(EXAMPLE_MPI)'
  AC_MSG_RESULT([yes])
else
  AC_MSG_RESULT([no])
fi

dnl
dnl check for PVM library
dnl

AC_MSG_CHECKING([for PVM library])
AC_SUBST(PROGRAM_PVM)
AC_SUBST(EXAMPLE_PVM)
if test "$ac_cv_alps_have_pvm" = yes; then
  PROGRAM_PVM='$(PROGRAM_PVM)'
  EXAMPLE_PVM='$(EXAMPLE_PVM)'
  AC_MSG_RESULT([yes])
else
  AC_MSG_RESULT([no])
fi

dnl
dnl generate files
dnl

AC_CONFIG_FILES(Makefile test/Makefile looper/copyright.h)
AC_CONFIG_FILES(lattices.xml models.xml)
AC_CONFIG_FILES(test/lattices.xml test/models.xml)
AC_CONFIG_FILES(percolation-params qmc-params)
AC_OUTPUT
